# gruezi

./: .gitignore  .justfile  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Containerfile  LICENSE  README.md  mise.toml
.devcontainer/: README.md  compose.yaml  devcontainer.json  devcontainer.portable.json  post-start.sh  postcreate.sh
.github/workflows/: build.yml  coverage.yml  release.yml
ansible/: README.md  ansible.cfg  deploy-ha-lab.yml  ha-collect.yml  ha-drop.yml  ha-netem.yml
ansible/group_vars/: gruezi_ha_lab.yml.example
ansible/inventory/: lab.yml.example
ansible/templates/: gruezi-ha.yaml.j2
contrib/: README.md
contrib/debian/: postinst  prerm
contrib/systemd/: gruezi.env.example  gruezi.service
examples/: ha-node-a.yaml  ha-node-b.yaml  ha.yaml  kv.yaml
scripts/: dev-ssh  dev-up  obs-dev  test-ha-netem.sh
src/: config.rs  lib.rs
src/cli/: start.rs  telemetry.rs
src/cli/actions/: mod.rs  peers.rs  start.rs  status.rs
src/cli/commands/: mod.rs
src/cli/dispatch/: mod.rs
src/gruezi/: addresses.rs  api.rs  ha.rs  hooks.rs  mod.rs  net.rs  peers.rs  signal.rs  start.rs  status.rs
tests/: ha_addresses.rs  ha_hooks.rs  ha_mode.rs
