[package]
name = "gruezi"
version = "0.1.2"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "Service Discovery & Distributed Key-Value Store"
license = "BSD-3-Clause"
repository = "https://github.com/gruezi-io/gruezi"
readme = "README.md"
keywords = ["service-discovery", "distributed", "raft", "key-value", "consensus"]
categories = ["command-line-utilities", "network-programming"]
edition = "2024"

[lints.rust]
warnings = "deny"

[lints.clippy]
# Allow unstable/opinionated lints (lower priority so individual lints can override)
nursery = { level = "allow", priority = -1 }

# Enforce pedantic lints
pedantic = "deny"

# Core lint groups
all = "deny"
correctness = "deny"
suspicious = "deny"
perf = "deny"
complexity = "deny"

# Safety-critical lints
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
await_holding_lock = "deny"

# Performance + memory reliability
needless_borrow = "deny"
needless_collect = "deny"
large_stack_arrays = "deny"

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.21"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "gzip-tonic", "tls", "tls-roots", "trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
socket2 = "0.6"
tokio = { version = "1.51.1", features = ["full"] }
tonic = { version = "0.14.5", features = ["tls-native-roots"] }
tracing = "0.1"
tracing-futures = "0.2.5"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ulid = "1.2.1"

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/gruezi", dest = "/usr/bin/gruezi", mode = "0755" },
    { source = "contrib/systemd/gruezi.service", dest = "/etc/systemd/system/gruezi.service", mode = "0644" },
    { source = "contrib/systemd/gruezi.env.example", dest = "/etc/gruezi/gruezi.env", mode = "0640" },
]

[package.metadata.deb]
assets = [
  ["target/release/gruezi", "/usr/bin/gruezi", "755"],
  ["contrib/systemd/gruezi.service", "/etc/systemd/system/gruezi.service", "644"],
  ["contrib/systemd/gruezi.env.example", "/etc/gruezi/gruezi.env", "640"],
]
depends = ""
maintainer-scripts = "contrib/debian"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
